Major User visible changes in Buildbot.             -*- outline -*-
   see the git log for a detailed list of changes:
   http://github.com/buildbot/buildbot/commits/master


* Next Version

** EC2 instances are now terminated instead of stopped.

This is really only relevant for EBS-backed instances, as Buildbot will now
free the instance and associated EBS storage when shutting down the slave.

** SQLite databases use write-ahead logging

WAL mode offers much greater concurrency (preventing the dreaded 'database is
locked' errors) and is also more efficient and durable.

** Deprecations, Removals, and Non-Compatible Changes

*** The db.buildrequests.claimBuildRequests method can no longer re-claim
already-claimed requests; use reclaimBuildRequests instead.  The database no
longer tracks master instances, so the unclaimOldIncarnationRequests method has
been removed.  Note that several of the methods in this module now perform
fewer consistency checks, for efficiency.

*** Upgrades directly from versions older than 0.6.5 will no longer
automatically migrate logfiles.

** Customizable validation regexps

The global c['validation'] parameter can be used to adjust the regular
expressions used to validate branches, revisions, and properties input by the
user.

** Logging for SVNPoller cleaned up

All logging for SVNPoller now starts with "SVNPoller: ". Previously it was
mixed case and not uniform.

** New and improved Source steps

Source steps have been rewritten to have a simpler, more consistent
configuration, and to run on the master instead of the slave, allowing much
more control over their behavior.  So far, Mercurial is complete.

** Source steps have logEnviron parameter

Similar to shell commands, a logEnviron parameter is now supported for Source
steps.

** Interested users for Try

Try jobs can now include the name of an interested user, which will be kept
with the patch and displayed in the web status.

** 'buildbot checkconfig' improved
