@@ -981,6 +981,14 @@ class IStatusReceiver(Interface):
 
     def slaveDisconnected(slaveName):
         """The slave has disconnected."""
+        
+    def checkConfig(otherStatusReceivers):
+        """Verify that there are no other status receivers which conflict with
+        the current one.
+        
+        @type  otherStatusReceivers: L{IStatusReceiver}
+        """
+
 
 class IControl(Interface):
     def addChange(change):
